[metadata]
name = support-PyOak
version = 0.0.1
author = Wyatt Castaneda
author_email = wyatt.castaneda@gmail.com
description = This is a collection of simple helper functions in python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyoak/support
project_urls =
    Bug Tracker = https://github.com/pyoak/support/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
